@@ -2,7 +2,6 @@
 AM_CFLAGS =
 AM_CPPFLAGS =
 AM_CXXFLAGS =
-AM_LIBADD =
 BUILT_SOURCES =
 CLEANFILES =
 EXTRA_DIST =
